Sat Oct 11 12:24:23 CEST 2003  Jan Hubicka  <jh@suse.cz>

	* varasm.c (notice_global_symbol):  Fix handling of variables; avoid
	re-computing of variable.

2003-10-11  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_return_in_memory): Rename from
	return_in_memory, make static, change signature to match target hook.
	(alpha_setup_incoming_varargs): Make static, change signature to
	match target hook, add code for vms and unicos.
	(TARGET_PROMOTE_FUNCTION_ARGS, TARGET_PROMOTE_FUNCTION_RETURN,
	TARGET_PROMOTE_PROTOTYPES, TARGET_STRUCT_VALUE_RTX,
	TARGET_RETURN_IN_MEMORY, TARGET_SETUP_INCOMING_VARARGS,
	TARGET_STRICT_ARGUMENT_NAMING,
	TARGET_PRETEND_OUTGOING_VARARGS_NAMED): New.
	* config/alpha/alpha-protos.h: Update.
	* config/alpha/alpha.h (PROMOTE_FUNCTION_ARGS,
	PROMOTE_FUNCTION_RETURN, RETURN_IN_MEMORY,
	SETUP_INCOMING_VARARGS): Remove.
	* config/alpha/unicosmk.h (SETUP_INCOMING_VARARGS): Remove.
	* config/alpha/vms.h (SETUP_INCOMING_VARARGS): Remove.

2003-10-11  Ian Lance Taylor  <ian@wasabisystems.com>

	* config/arm/arm.c (arm_regno_class): Handle IWMMXT_GR_REGS.

2003-10-11  Kazu Hirata  <kazu@cs.umass.edu>

	* config/m68k/lb1sf68.asm: Follow spelling conventions.
	* config/m68k/m68k.c: Likewise.
	* config/m68k/m68k.h: Likewise.
	* config/m68k/m68k.md: Likewise.

2003-10-11  Roger Sayle  <roger@eyesopen.com>

	* builtins.c (expand_builtin_memcpy): Optimize case when the two
	pointer arguments are the equal, non-volatile and side-effect free.
	(expand_builtin_mempcpy): Likewise.
	(expand_builtin_memmove): Likewise.
	(expand_builtin_strcpy): Likewise.
	(expand_builtin_memcmp): Likewise.
	(expand_builtin_strcmp): Likewise.
	(expand_builtin_strncmp): Likewise.

2003-10-11  Roger Sayle  <roger@eyesopen.com>

	* combine.c (apply_distributive_law): Enable "distributive" floating
	point optimizations with -funsafe-math-optimizations.

2003-10-11  Andrew Pinski <pinskia@physics.uc.edu>
	
	* genmodes.c (emit_mode_mask) Change MASK to MODE_MASK.
